<resources>
    <string name="app_name">Real Estate Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="loan_calculator">Loan calculator</string>
    <string name="new_property">New property</string>
    <string name="map">Map</string>
    <string name="icon">icon</string>
    <string name="price_format_dollar">%s $</string>
    <string name="price_format_eur">%s €</string>
    <string name="square_meters">%s m²</string>
    <string name="price_format_with_decimal">%s.0</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tristique nibh et interdum consequat. Sed consequat, tortor vel rutrum congue, arcu ligula viverra nisi, sed gravida justo nisi vitae lectus. Pellentesque vel nulla eu lectus ultricies viverra ac sit amet orci. Duis finibus laoreet volutpat. In rhoncus tempor orci, eu viverra risus pretium a. Duis aliquam pretium ligula vel dictum. Donec eu felis turpis. Pellentesque a risus tincidunt, placerat velit id, dapibus odio. Sed porta purus vel convallis pretium. Nunc id risus ante. Vivamus in hendrerit sem. Duis non mi et lectus luctus ullamcorper. Curabitur placerat mauris quis elit ultrices consequat. Sed et sapien velit.</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="surface">Surface</string>
    <string name="number_of_room">Number of room</string>
    <string name="number_of_bathroom">Number of bathroom</string>
    <string name="number_of_bedroom">Number of bedroom</string>
    <string name="address">Address</string>
    <string name="point_of_interest">Point of interest</string>
    <string name="agent">Agent</string>
    <string name="save">Save</string>
    <string name="add_picture">Add picture</string>
    <string name="room">Room</string>
    <string name="bathroom">Bathroom</string>
    <string name="bedroom">Bedroom</string>
    <string name="description">Description</string>
    <string name="eatery">Eatery</string>
    <string name="gas_station">Gas station</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="supermarket">Supermarket</string>
    <string name="hospital">Hospital</string>
    <string name="public_transportation">Public transportation</string>
    <string name="shopping_center_mall">Shopping center/mall</string>
    <string name="park">Park</string>
    <string name="school">School</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="photo_description">Photo description</string>
    <string name="task_cancelled">Task Cancelled</string>
    <string name="create_property_error">please fill in the box</string>
    <string name="missing_information">missing information !</string>
    <string name="property_created">Property created !</string>
    <string name="error_empty_field">Please enter %s.</string>
    <string name="room_number">Room number</string>
    <string name="bathroom_number">Bathroom number</string>
    <string name="bedroom_number">Bedroom number</string>
    <string name="channel_id">com.realestatemanager</string>
    <string name="channel_name">Real Estate Messaging</string>
    <string name="new_property_added">New property added !</string>
    <string name="update">Update</string>
    <string name="edit">edit</string>
    <string name="property_updated">Property updated</string>
    <string name="mark_as_sold">MARK AS SOLD</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation_message">Once confirmed, the property will be marked as sold on %1$s and cannot be edited.</string>
    <string name="interest_rate">Interest Rate (%)</string>
    <string name="loan_term_years">Loan Term (Years)</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="monthly_payment">Monthly payment</string>
    <string name="payment_per_month">%s $ per month</string>
    <string name="interest_rate_value">%.2f %%</string>
    <string name="loan_term">%d years</string>
    <string name="min_per_month">4 167 $ per month</string>
    <string name="min_interest_rate">0.00 %</string>
    <string name="min_term_years">2 years</string>
    <string name="total_interest">Cost of loan %s $</string>
    <string name="min_cost_of_loan">Cost of loan 0 $</string>
    <string name="price_ascending">Price Ascending</string>
    <string name="price_descending">Price Descending</string>
    <string name="date_ascending">Date Ascending</string>
    <string name="date_descending">Date Descending</string>
    <string name="ordering_filter">Ordering filter</string>
    <string name="minimum_photo">Minimum photo</string>
    <string name="radius">Radius</string>
    <string name="location">Location</string>
    <string name="surface_m">Surface m²</string>
    <string name="filter">Filter</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="apply_filter">Apply filter</string>

    <string-array name="numbers_array">
        <item />
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>


</resources>
