<?xml version="1.0" encoding="utf-8"?>
<GridLayout android:id="@+id/add_property_view_nearby_gridlayout_nearby"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="3"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_nearby_school"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/school"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_nearby_park"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/park"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_nearby_hospital"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/hospital"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_nearby_supermarket"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/supermarket"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_nearby_Pharmacy"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/pharmacy" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_nearby_gas_station"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/gas_station"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_nearby_eatery"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/eatery"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_nearby_shop"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/shopping_center_mall"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_nearby_public_transportation"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/public_transportation" />
</GridLayout>